fix: added the updates for debounce search and gif loader for infinite scroll

--- a/config/database.yml
+++ b/config/database.yml
@@ -8,7 +8,7 @@ development: &default
 
 test:
   <<: *default
-  database: jppost_test
+  database: infinite_test
 
 production:
   adapter: sqlite3
